committing a partially working version so I can run expo prebuild --clean

--- a/example/app.json
+++ b/example/app.json
@@ -21,7 +21,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "expo.modules.spellchecker.example"
+      "package": "expo.modules.spellchecker.example",
+      "permissions": ["READ_USER_DICTIONARY", "WRITE_USER_DICTIONARY"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
