--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "expo-status-bar": "~2.0.0",
-    "expo-device": "~7.0.1"
+    "expo-device": "~7.0.1",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
