--- a/.npmignore
+++ b/.npmignore
@@ -6,9 +6,17 @@
 
 __mocks__
 __tests__
+/example/
 
 /babel.config.js
 /android/src/androidTest/
 /android/src/test/
 /android/build/
-/example/
+/ios/Pods/
+/ios/build/
+
+# Allow inclusion of important project files
+!ios/**/*.swift
+!ios/**/*.h
+!android/**/*.kt
+!android/**/*.java
